--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="src\ParticleDirector.cpp" />
     <ClCompile Include="src\PlayerInput.cpp" />
     <ClCompile Include="src\PlayerSystem.cpp" />
+    <ClCompile Include="src\ScoreTag.cpp" />
     <ClCompile Include="src\Server.cpp" />
     <ClCompile Include="src\sha1.cpp" />
     <ClCompile Include="src\TextboxDirector.cpp" />
@@ -166,6 +167,7 @@
     <ClInclude Include="src\ParticleDirector.hpp" />
     <ClInclude Include="src\PlayerInput.hpp" />
     <ClInclude Include="src\PlayerSystem.hpp" />
+    <ClInclude Include="src\ScoreTag.hpp" />
     <ClInclude Include="src\Server.hpp" />
     <ClInclude Include="src\ServerMessages.hpp" />
     <ClInclude Include="src\SharedStateData.hpp" />
