--- a/Demo/src/CMakeLists.txt
+++ b/Demo/src/CMakeLists.txt
@@ -18,6 +18,7 @@ set(PROJECT_SRC
   ${CMAKE_CURRENT_SOURCE_DIR}/ParticleDirector.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PlayerInput.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PlayerSystem.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ScoreTag.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Server.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/sha1.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/TextboxDirector.cpp
