--- a/Demo/Demo.vcxproj.filters
+++ b/Demo/Demo.vcxproj.filters
@@ -173,5 +173,8 @@
     <ClInclude Include="src\PauseState.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
