--- a/xyginext/CMakeLists.txt
+++ b/xyginext/CMakeLists.txt
@@ -28,7 +28,7 @@ endif()
 
 # Only works with SFML version 2.4 and above
 SET(SFML_MIN_VERSION 2.4)
-find_package(SFML ${SFML_MIN_VERSION} REQUIRED graphics window audio system network)
+find_package(SFML ${SFML_MIN_VERSION} REQUIRED graphics window audio system)
 
 # Also require OpenGL and ENet
 find_package(OpenGL REQUIRED)
