begin implementing power up system

--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="src\PauseState.cpp" />
     <ClCompile Include="src\PlayerInput.cpp" />
     <ClCompile Include="src\PlayerSystem.cpp" />
+    <ClCompile Include="src\PowerupSystem.cpp" />
     <ClCompile Include="src\ScoreTag.cpp" />
     <ClCompile Include="src\Server.cpp" />
     <ClCompile Include="src\sha1.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="src\PauseState.hpp" />
     <ClInclude Include="src\PlayerInput.hpp" />
     <ClInclude Include="src\PlayerSystem.hpp" />
+    <ClInclude Include="src\PowerupSystem.hpp" />
     <ClInclude Include="src\ScoreTag.hpp" />
     <ClInclude Include="src\Server.hpp" />
     <ClInclude Include="src\ServerMessages.hpp" />
