add demo readme add changing background colour when switching maps

--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -150,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="src\ActorSystem.hpp" />
     <ClInclude Include="src\AnimationController.hpp" />
+    <ClInclude Include="src\BackgroundShader.hpp" />
     <ClInclude Include="src\BubbleSystem.hpp" />
     <ClInclude Include="src\ClientServerShared.hpp" />
     <ClInclude Include="src\CollisionSystem.hpp" />
