--- a/Demo/src/CMakeLists.txt
+++ b/Demo/src/CMakeLists.txt
@@ -25,4 +25,5 @@ set(PROJECT_SRC
   ${CMAKE_CURRENT_SOURCE_DIR}/Server.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/sha1.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/TextboxDirector.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/TowerDirector.cpp
   PARENT_SCOPE)
