update dedicated server cmake file

--- a/ServerTest/src/CMakeLists.txt
+++ b/ServerTest/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(PROJECT_SRC
   ${PROJECT_SRC}
   ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/AnimationController.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/BonusSystem.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/BubbleSystem.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/ClientServerShared.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/../../Demo/src/CollisionSystem.cpp
