--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="src\InventoryDirector.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MapAnimator.cpp" />
+    <ClCompile Include="src\MenuDirector.cpp" />
     <ClCompile Include="src\MenuState.cpp" />
     <ClCompile Include="src\NPCSystem.cpp" />
     <ClCompile Include="src\ParticleDirector.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="src\InventoryDirector.hpp" />
     <ClInclude Include="src\MapAnimator.hpp" />
     <ClInclude Include="src\MapData.hpp" />
+    <ClInclude Include="src\MenuDirector.hpp" />
     <ClInclude Include="src\MenuState.hpp" />
     <ClInclude Include="src\MessageIDs.hpp" />
     <ClInclude Include="src\MusicCallback.hpp" />
