refactor sprite component and sprite system to use drawable components for rendering

--- a/xyginext/xyginext.vcxproj
+++ b/xyginext/xyginext.vcxproj
@@ -163,7 +163,7 @@
     <ClCompile Include="src\ecs\systems\QuadTreeNode.cpp" />
     <ClCompile Include="src\ecs\systems\RenderSystem.cpp" />
     <ClCompile Include="src\ecs\systems\SpriteAnimator.cpp" />
-    <ClCompile Include="src\ecs\systems\SpriteRenderer.cpp" />
+    <ClCompile Include="src\ecs\systems\SpriteSystem.cpp" />
     <ClCompile Include="src\ecs\systems\TextRenderer.cpp" />
     <ClCompile Include="src\ecs\systems\UISystem.cpp" />
     <ClCompile Include="src\graphics\postprocess\PostAntique.cpp" />
@@ -234,7 +234,7 @@
     <ClInclude Include="include\xyginext\ecs\systems\QuadTree.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\RenderSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\SpriteAnimator.hpp" />
-    <ClInclude Include="include\xyginext\ecs\systems\SpriteRenderer.hpp" />
+    <ClInclude Include="include\xyginext\ecs\systems\SpriteSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\TextRenderer.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\UISystem.hpp" />
     <ClInclude Include="include\xyginext\graphics\postprocess\Antique.hpp" />
