--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="src\ScoreTag.cpp" />
     <ClCompile Include="src\Server.cpp" />
     <ClCompile Include="src\sha1.cpp" />
+    <ClCompile Include="src\SpringFlower.cpp" />
     <ClCompile Include="src\TextboxDirector.cpp" />
     <ClCompile Include="src\TowerDirector.cpp" />
   </ItemGroup>
@@ -187,6 +188,7 @@
     <ClInclude Include="src\Server.hpp" />
     <ClInclude Include="src\ServerMessages.hpp" />
     <ClInclude Include="src\SharedStateData.hpp" />
+    <ClInclude Include="src\SpringFlower.hpp" />
     <ClInclude Include="src\SpriteIDs.hpp" />
     <ClInclude Include="src\StateIDs.hpp" />
     <ClInclude Include="src\TextboxDirector.hpp" />
