--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="src\GameState.cpp" />
     <ClCompile Include="src\IntroState.cpp" />
     <ClCompile Include="src\InventoryDirector.cpp" />
+    <ClCompile Include="src\LoadingScreen.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MapAnimator.cpp" />
     <ClCompile Include="src\MenuDirector.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="src\Hitbox.hpp" />
     <ClInclude Include="src\IntroState.hpp" />
     <ClInclude Include="src\InventoryDirector.hpp" />
+    <ClInclude Include="src\LoadingScreen.hpp" />
     <ClInclude Include="src\MapAnimator.hpp" />
     <ClInclude Include="src\MapData.hpp" />
     <ClInclude Include="src\MenuDirector.hpp" />
