--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="src\LoadingScreen.hpp" />
     <ClInclude Include="src\MapAnimator.hpp" />
     <ClInclude Include="src\MapData.hpp" />
+    <ClInclude Include="src\MenuCallbacks.hpp" />
     <ClInclude Include="src\MenuDirector.hpp" />
     <ClInclude Include="src\MenuState.hpp" />
     <ClInclude Include="src\MessageIDs.hpp" />
