--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="src\Server.cpp" />
     <ClCompile Include="src\sha1.cpp" />
     <ClCompile Include="src\SpringFlower.cpp" />
+    <ClCompile Include="src\SwarmSystem.cpp" />
     <ClCompile Include="src\TextboxDirector.cpp" />
     <ClCompile Include="src\TowerDirector.cpp" />
   </ItemGroup>
@@ -201,6 +202,7 @@
     <ClInclude Include="src\SpringFlower.hpp" />
     <ClInclude Include="src\SpriteIDs.hpp" />
     <ClInclude Include="src\StateIDs.hpp" />
+    <ClInclude Include="src\Swarm.hpp" />
     <ClInclude Include="src\TextboxDirector.hpp" />
     <ClInclude Include="src\TowerDirector.hpp" />
     <ClInclude Include="src\TowerGuyCallback.hpp" />
