--- a/Demo/src/CMakeLists.txt
+++ b/Demo/src/CMakeLists.txt
@@ -31,6 +31,7 @@ set(PROJECT_SRC
   ${CMAKE_CURRENT_SOURCE_DIR}/ScoreTag.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Server.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SpringFlower.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/SwarmSystem.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/sha1.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/TextboxDirector.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/TowerDirector.cpp
